[package]
name = "db-utils"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Parity-Ethereum DB wrappers"
license = "GPL3"

[lib]
path = "src/lib.rs"

[dependencies]
blooms-db = { path = "../blooms-db" }
cache-utils = { path = "../cache" }
ethcore = { path = "../../ethcore" }
ethcore-blockchain = { path = "../../ethcore/blockchain" }
ethcore-db = { path = "../../ethcore/db" }
ethereum-types = "0.4"
kvdb = "0.1"
kvdb-rocksdb = "0.1.3"
migration-rocksdb = { path = "../migration-rocksdb" }
rlp = { version = "0.3.0", features = ["ethereum"] }
