[package]
name = "ewasm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# byteorder = "1.0"
# ethereum-types = "0.4"
# log = "0.4"
# parity-wasm = "0.31"
# libc = "0.2"
# pwasm-utils = "0.2.2"
# ethcore-logger = { path = "../../logger" }
vm = { path = "../../vm" }
wasmi = "0.3.0"
